--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "expo-font": "~12.0.9",
-    "expo-splash-screen": "~0.27.5"
+    "expo-splash-screen": "~0.27.5",
+    "expo-camera": "~15.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
