--- a/app.json
+++ b/app.json
@@ -27,11 +27,9 @@
     "plugins": [
       "expo-font",
       [
-        "expo-camera",
+        "expo-image-picker",
         {
-          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
-          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
-          "recordAudioAndroid": true
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
       ]
     ]
