--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "expo": "~51.0.28",
+    "expo-font": "~12.0.9",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "expo-font": "~12.0.9",
-    "expo-splash-screen": "~0.27.5",
+    "expo-image-picker": "~15.0.7",
     "expo-camera": "~15.0.15"
   },
   "devDependencies": {
